style.css
*{
    --gradient: linear-gradient(90deg, #8838FF 0.22%, #E942FF 105.73%);
    --gradient-inverse: linear-gradient(270deg, #8838FF 11.02%, #E942FF 100%);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background: #FAFAFA;
    overflow-x: hidden;
    width: 100vw;
}
.content{
    position: relative;
    display: flex;
    flex-direction: column;
    padding-top: calc(7.6vw + 36.5px);
    height: 100%;
    overflow: hidden;   
    min-height: 1024px;
}
.cell-img{
    margin-left: calc(27.7vw - 35.9px);
    width: 247px;
    height: 505px;
    position: relative;
    background: #FFFFFF;
    box-shadow: 15px 25px 50px 10px rgba(0, 0, 0, 0.2);
    border-radius: 27px;
    z-index: -2;
}
.app-header{
    position: absolute;
    width: 227px;
    height: 66px;
    top: 11px;
    left: 10px;
    background: var(--gradient);
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
    border-radius: 20px 20px 7px 7px;
}
.cam{
width: 129px;
height: 18px;
margin: 0 auto;
background: #FFFFFF;
border-radius: 0px 0px 14px 14px;
}
.header-elements{
    height: 48px;
    display: flex;
    flex-direction: row;
}
.back{
    position: relative;
    width: 4px;
    height: 10px;
    margin: 19px 0 19px 15px
}
.back::before,
.back::after{
    content: ' ';
    position: absolute;
    width: 2px;
    height: 6px;
    background: white;
    border-radius: 1px;
}
.back::before{
    top: 4px;
    transform: translate(1px,0) rotate(-35deg);
}
.back::after{
    transform: translate(1px,0) rotate(35deg);
}
.user-img{
    width: 26px;
    height: 26px;
    border: 1px white solid;
    border-radius: 50%;
    margin: auto 11px;
}
.user-text{
    font-family: 'Rubik', sans-serif;
    display: flex;
    flex-direction: column;
}
.user-name{
    color: white;
    font-size: 12px;
    line-height: 14px;
    letter-spacing: -0.035em;
    margin: 11px auto 1px 0;
}
.user-status{
    color: #D89EFF;
    font-size: 8px;
    line-height: 9px;
    letter-spacing: 0.005em;
    margin: 1px auto 12px 0;
}
.menu{
    position: relative;
    width: 2px;
    height: 2px;
    border-radius: 1px;
    background: white;
    margin: auto 1rem auto auto;
}
.menu::before,
.menu::after{
    content:' ';
    position: absolute;
    width: 2px;
    height: 2px;
    background: white;
    border-radius: 1px;
}
.menu::before{
    top: 4px;
}
.menu::after{
    top: -4px;
}
.cell-background{
    position: absolute;
    width: 227px;
    height: 422px;
    left: 10px;
    top: 72px;
    z-index: -1;
    background: #F6F4F7;
    border-radius: 0px 0px 17px 17px;
}
.spacer{
    height: 5px;
    margin-bottom: 11px;
}
.left-msg{
    width: 128px;
    margin: 8px 7px;
    padding: 7.1px 8px 5.1px 8px;
    background: #EDE5F4;
    border-radius: 9px 9px 9px 4px;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: 8px;
    line-height: 11px;
    letter-spacing: 0.005em;
    color: #9241C8;
}
#dog-imgs{
    margin: 15px -1px -4px auto;
    width: 137px;
}
.chat-img{
    width: 41px;
    height: 41px;
    border-radius: 11px;
}
.right-msg{
    width: 128px;
    margin: 8px 7px 8px auto;
    padding: 7.5px 8px 4.5px 8px;
    background: #FFFFFF;
    border-radius: 9px 9px 9px 4px;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: 8px;
    line-height: 11px;
    letter-spacing: 0.005em;
    color: #857297;
}
.spacer2{
    height: 1px;
    margin-top: -1px;
}
.option-msg{
    width: 160px;
    display: flex;
    margin: 8px 7px;
    padding: 8.4px 16px 6.4px 8px;
    background: var(--gradient-inverse);
    border-radius: 9px 9px 9px 4px;
}
.selector{
    height: 12px;
    width: 12px;
    border-radius: 50%;
    border: 1px solid #EC5DFF;
    margin: auto 8px;
}
.option-title{
    margin: auto 0;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: 8px;
    line-height: 11px;
    color: #FFFFFF;
}
.option-value{
    margin: auto 0 auto auto ;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
    line-height: 18px;
    color: #FFFFFF;
}
.input{
    position: relative;
    margin: 16px 7px 10px;
    padding: 14px 19px 9px ;
    background: #FFFFFF;
    border-radius: 17px;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: 8px;
    line-height: 11px;
    letter-spacing: 0.06em;
    color: #C6CACD;
}
.send-btn{
    position: absolute;
    background: #3E2753;
    width: 24px;
    height: 24px;
    top: 5px;
    right: 5px;
    border-radius: 50%;
}
.send-btn::before,
.send-btn::after{
    content: '';
    position: absolute;
    width: 8px;
    height: 2.5px;
    border-radius: 1px;
    background-color: white;
}
.send-btn::before{
    top: 50%;
    left: 50%;
    transform: translate(-50%,-110%) rotate(45deg);
}
.send-btn::after{
    top: 50%;
    left: 50%;
    transform: translate(-50%,50%) rotate(-45deg);
}
h1{
    font-family: Rubik;
    font-style: normal;
    font-weight: 500;
    font-size: 40px;
    line-height: 70px;
    text-align: center;
    letter-spacing: 0.017em;
    color: #3E2753;
    margin: 52px 0 13px;
}
p{
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    line-height: 28px;
    text-align: center;
    letter-spacing: 0.003em;
    color: #A39DAA;
    width: 316px;
    margin: auto;
}
.attribution{
    position: absolute;
    bottom: 1rem;
    left: 50%;
    transform: translate(-50%,-10%);
    text-align: center;
    font-family: Rubik;
    font-style: normal;
    font-weight: normal;
    font-size: .8rem;
    color: #A39DAA;
}
a{
    text-decoration: none;
    font-weight: 500;
    background: var(--gradient);
    background-clip: text;
    -webkit-text-fill-color: transparent; 
    -webkit-background-clip: text; 
}
.purple-shape{
    position: absolute;
    z-index: -3;
    width: 511px;
    height: 939px;
    left: calc(21.4vw - 399px);
    top: calc(17.7vw - 495px);
    background: linear-gradient(0deg, #8838FF 0%, #E942FF 100%);
    border-radius: 255px;
}
.gray-shape{
    position: absolute;
    z-index: -3;
    width: 511px;
    height: 1164px;
    right: calc(12.6vw - 367px);
    top: calc(-28.9vw + 533px);
    background: #F9F4FA;
    border-radius: 255.5px;
}
@media (min-width:800px){
    .content{
        flex-direction: row;
    }
    .cell-img{
        flex-shrink: 0;
    }
    .text{
        padding-top: calc(112.5px - 7.6vw);
    }
    p,
    h1{
        text-align: left;
        max-width: 461px;
        margin-left: calc(16.3vw - 114px);
    }
    p{
        width: calc(72.3vw - 282.9px);
    }
}

